These are all of my files at the end of level 1

--- a/CSS-Flags/index.html
+++ b/CSS-Flags/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>CSS Flags</title>
     </head>
     <body>
         <div class="france">
@@ -35,6 +36,13 @@
             <div class="greenn"></div>
             <div class="orange2"></div>
         </div>
+        <ol id = "list">
+            <li class="thing">number 1</li>
+            <li class="thing">number 2</li>
+            <li class="thing">number 3</li>
+
+        </ol>
+        <script src="index.js"></script>
 
     </body>
 
